<resources>
    <string name="app_name">Mercerecetas</string>
    <string name="title_home">Recetas</string>
    <string name="title_add_recipe">Nueva Receta</string>
    <string name="title_notifications">Notifications</string>
    <string name="recipe_image_desc">recipe image</string>
    <string name="display_recipe_time">&lt;b>Tiempo:&lt;/b>%s</string>

    <string name="display_recipe_mode">&lt;b>Modo:&lt;/b> %s</string>

    <string name="minutes_length">%dmin</string>
    <string name="hours_length">%dh</string>
    <string name="show_all_text">Mostrar Todo</string>
    <string name="carnes_item">Carnes</string>
    <string name="pescados_item">Pescados</string>
    <string name="arroces_item">Arroces</string>
    <string name="pastas_item">Pastas</string>
    <string name="legumbres_item">Legumbres</string>
    <string name="ingredients_title">Ingredientes</string>
    <string name="list_dots">.............</string>
    <string name="title_shop_fragment">Lista de la compra</string>
    <string name="nombre_receta">Nombre</string>
    <string name="tipo">Tipo:</string>
    <string name="carne">Carne</string>
    <string name="pescado">Pescado</string>
    <string name="pasta">Pasta</string>
    <string name="arroz">Arroz</string>
    <string name="vegetales">Vegetales</string>
    <string name="modo">Modo:</string>
    <string name="vapor">Vapor</string>
    <string name="cazuela">Cazuela</string>
    <string name="potaje">Potaje</string>
    <string name="pastel">Pastel</string>
    <string name="tiempo">Tiempo</string>
    <string name="tiempo_coc_minutos">Tiempo de cocción (minutos)</string>
    <string name="crear">Crear</string>
    <string name="addItem">Add an item</string>

    <!-- database strings -->


</resources>
<!--<string name="display_recipe_mode">Modo: %s</string>-->
    <!--    <string name="display_recipe_mode">&lt;b>Modo:&lt;/b>%s</string>-->
