<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/overflowMenu"
        android:title=""
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/show_all"
                android:title="@string/show_all_text"
                android:icon="@drawable/ic_tray"
                app:showAsAction="never"/>

            <item
                android:id="@+id/show_meat"
                android:icon="@drawable/ic_drumstick_bite_solid"
                android:title="@string/carnes_item"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/show_fish"
                android:icon="@drawable/ic_fish_solid"
                android:title="@string/pescados_item"
                />
            <item
                android:id="@+id/show_rice"
                android:icon="@drawable/ic_seedling_solid"
                android:title="@string/arroces_item"
                />
            <item
                android:id="@+id/show_pasta"
                android:icon="@drawable/ic_pasta"
                android:title="@string/pastas_item"
                />
            <item
                android:id="@+id/show_vegetables"
                android:icon="@drawable/ic_beans"
                android:title="@string/legumbres_item"
                />
        </menu>
    </item>
</menu>