<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addRecipeViewModel"
            type="app.kitsu.mercerecetas.ui.addrecipe.AddRecipeViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/general_margin"
        android:layout_marginBottom="?attr/actionBarSize"
        android:scrollbars="vertical"
        android:orientation="vertical"
        tools:context=".AddRecipeFragment">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:baselineAligned="true"
            android:visibility="visible"
            android:layout_marginBottom="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputNewRecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_receta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputLayout" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/RadioGroupType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"

            android:text="@string/tipo"
            app:layout_constraintBottom_toTopOf="@+id/recipeTypeRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutTitle" />

        <RadioGroup
            android:id="@+id/recipeTypeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RadioGroupTitle">

            <RadioButton
                android:id="@+id/radioButtonMeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carne" />

            <RadioButton
                android:id="@+id/radioButtonFish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pescado" />

            <RadioButton
                android:id="@+id/radioButtonPasta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pasta" />

            <RadioButton
                android:id="@+id/radioButtonRice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arroz" />

            <RadioButton
                android:id="@+id/radioButtonVeget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vegetales" />
        </RadioGroup>

        <TextView
            android:id="@+id/RadioGroupMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"

            android:text="@string/modo"
            app:layout_constraintBottom_toTopOf="@+id/recipeModeRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutTitle" />


        <RadioGroup
            android:id="@+id/recipeModeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RadioGroupTitle">

            <RadioButton
                android:id="@+id/radioButtonSteam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vapor" />

            <RadioButton
                android:id="@+id/radioButtonCasserole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cazuela" />

            <RadioButton
                android:id="@+id/radioButtonPottage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/potaje" />

            <RadioButton
                android:id="@+id/radioBTypeRice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/arroz" />


            <RadioButton
                android:id="@+id/radioButtonCake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pastel" />

        </RadioGroup>

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/tiempo_coc_minutos"
            android:inputType="number"
            android:importantForAutofill="no" />



        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="Imagen Receta"

            app:srcCompat="@android:drawable/ic_menu_camera"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Imágen por defecto (haz foto para cambiar):" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="@dimen/general_margin"
            android:text="@string/crear" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/general_margin">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/takePhotoFAB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginLeft="@dimen/general_margin"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginEnd="@dimen/general_margin"

            android:clickable="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="3:1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_camera" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

</layout>