<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.kitsu.mercerecetas.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_shoppingFragment"
            app:destination="@id/shoppingFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="app.kitsu.mercerecetas.ui.addrecipe.AddRecipeFragment"
        android:label="@string/title_add_recipe"
        tools:layout="@layout/fragment_add_recipe" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="app.kitsu.mercerecetas.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="app.kitsu.mercerecetas.ui.detail.DetailFragment"
        android:label="DetailFragment"
        tools:layout="@layout/fragment_detail">
        <argument android:name="selected_recipe"
            app:argType="app.kitsu.mercerecetas.database.Recipe"/>
    </fragment>
    <fragment
        android:id="@+id/shoppingFragment"
        android:name="app.kitsu.mercerecetas.ui.shopping.ShoppingFragment"
        android:label="@string/title_shop_fragment" >
        <argument
            android:name="recipesId"
            app:argType="long[]" />
    </fragment>
</navigation>
